test/visibility/import/public/qualifiedReexport/importAndImportFromUse.good
importAndImportFromUse.chpl:23: In function 'main':
importAndImportFromUse.chpl:24: error: 'B' undeclared (first use this function)
importAndImportFromUse.chpl:25: error: 'C' undeclared (first use this function)
